%% State machine derived from packages/core/src/state/state-machine.ts
%% IDLE and STOPPED reject stop/complete/destroy (no transition drawn)
stateDiagram-v2
    [*] --> IDLE

    IDLE --> RUNNING: start()

    RUNNING --> PAUSED: pause()
    RUNNING --> STOPPED: stop()/complete()/destroy()
    RUNNING --> IDLE: reset()

    PAUSED --> RUNNING: resume()
    PAUSED --> STOPPED: stop()/destroy()
    PAUSED --> IDLE: reset()

    STOPPED --> IDLE: reset()
